--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -14,12 +14,15 @@ on:
 jobs:
   update-sitemap:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Required for pushing changes
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0  # Fetch full history for better git operations
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -27,15 +30,21 @@ jobs:
           python-version: '3.11'
 
       - name: Generate sitemap
-        run: python3 generate-sitemap.py
+        run: |
+          python3 generate-sitemap.py
+          echo "Sitemap generation completed"
+        continue-on-error: false
 
       - name: Check for changes
         id: check_changes
         run: |
-          if git diff --quiet sitemap.xml; then
-            echo "changed=false" >> $GITHUB_OUTPUT
+          # Normalize line endings and check for meaningful changes
+          git diff --exit-code --quiet sitemap.xml && echo "changed=false" >> $GITHUB_OUTPUT || echo "changed=true" >> $GITHUB_OUTPUT
+          if [ "$(git diff --numstat sitemap.xml | cut -f1)" != "0" ]; then
+            echo "📝 Sitemap has changes"
+            git diff --stat sitemap.xml
           else
-            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "✅ No changes in sitemap"
           fi
 
       - name: Commit and push if changed
@@ -44,10 +53,34 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add sitemap.xml
-          git commit -m "Auto-update sitemap.xml [skip ci]"
-          git push
+          git commit -m "Auto-update sitemap.xml [skip ci]" || exit 0
+
+          # Retry push up to 3 times in case of conflicts
+          for i in {1..3}; do
+            git pull --rebase origin main && git push && break || sleep 2
+          done
 
       - name: Submit sitemap to Google
         if: steps.check_changes.outputs.changed == 'true'
         run: |
-          curl "https://www.google.com/ping?sitemap=https://blog.pebblous.ai/sitemap.xml"
+          echo "📡 Notifying Google about sitemap update..."
+          RESPONSE=$(curl -s -w "\n%{http_code}" "https://www.google.com/ping?sitemap=https://blog.pebblous.ai/sitemap.xml")
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          if [ "$HTTP_CODE" -eq 200 ]; then
+            echo "✅ Successfully notified Google (HTTP $HTTP_CODE)"
+          else
+            echo "⚠️ Google notification returned HTTP $HTTP_CODE"
+          fi
+        continue-on-error: true  # Don't fail workflow if Google ping fails
+
+      - name: Summary
+        if: always()
+        run: |
+          echo "## Sitemap Update Summary" >> $GITHUB_STEP_SUMMARY
+          echo "- **Changed**: ${{ steps.check_changes.outputs.changed }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Timestamp**: $(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ steps.check_changes.outputs.changed }}" == "true" ]; then
+            echo "- **Status**: ✅ Sitemap updated and pushed" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "- **Status**: ℹ️ No changes needed" >> $GITHUB_STEP_SUMMARY
+          fi
