--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ project/CURK/ontology/example/ISO_IEC5259-2_2024_EN.pdf
 
 # Claude Code
 .claude/
+project/AADS/demo01/AADS-Y1-img-01-y1-overview.heic
+project/AADS/demo01/AADS-Y1-img-02-y1-result.heic
+project/AADS/demo01/AADS-Y1-img-03-trend.heic
+project/AADS/demo01/AADS-Y1-img-04-y2-goal.heic
