--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths:
       - 'articles.json'
-      - 'generate-sitemap.py'
+      - 'generate-sitemap.js'
   schedule:
     # Run daily at 00:00 UTC (09:00 KST)
     - cron: '0 0 * * *'
@@ -24,14 +24,14 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0  # Fetch full history for better git operations
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          python-version: '3.11'
+          node-version: '20'
 
       - name: Generate sitemap
         run: |
-          python3 generate-sitemap.py
+          node generate-sitemap.js
           echo "Sitemap generation completed"
         continue-on-error: false
 
