--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ project/AADS/demo01/AADS-Y1-img-01-y1-overview.heic
 project/AADS/demo01/AADS-Y1-img-02-y1-result.heic
 project/AADS/demo01/AADS-Y1-img-03-trend.heic
 project/AADS/demo01/AADS-Y1-img-04-y2-goal.heic
+report/llm-dataset-guide-2025-10-16/.DS_Store
+template/article-02-Theme/.DS_Store
+report/llm-dataset-guide-2025-10-16/.DS_Store
