--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ template/article-02-Theme/.DS_Store
 report/llm-dataset-guide-2025-10-16/.DS_Store
 report/solar-vs-glm/image/solar-vs-glm-forensic.heic
 report/solar-vs-glm/image/solar-vs-glm-forensic-v1.png
+report/llm-dataset-guide-2025-10-16/.DS_Store
+template/article-02-Theme/.DS_Store
