--- a/.gitignore
+++ b/.gitignore
@@ -21,17 +21,11 @@ project/CURK/ontology/example/ISO_IEC5259-2_2024_EN.pdf
 
 # Claude Code
 .claude/
+
+# Large/binary assets
 project/AADS/demo01/AADS-Y1-img-01-y1-overview.heic
 project/AADS/demo01/AADS-Y1-img-02-y1-result.heic
 project/AADS/demo01/AADS-Y1-img-03-trend.heic
 project/AADS/demo01/AADS-Y1-img-04-y2-goal.heic
-report/llm-dataset-guide-2025-10-16/.DS_Store
-template/article-02-Theme/.DS_Store
-report/llm-dataset-guide-2025-10-16/.DS_Store
 report/solar-vs-glm/image/solar-vs-glm-forensic.heic
 report/solar-vs-glm/image/solar-vs-glm-forensic-v1.png
-report/llm-dataset-guide-2025-10-16/.DS_Store
-template/article-02-Theme/.DS_Store
-template/article-02-Theme/.DS_Store
-template/article-02-Theme/.DS_Store
-report/llm-dataset-guide-2025-10-16/.DS_Store
