--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ project/AADS/demo01/AADS-Y1-img-03-trend.heic
 project/AADS/demo01/AADS-Y1-img-04-y2-goal.heic
 report/solar-vs-glm/image/solar-vs-glm-forensic.heic
 report/solar-vs-glm/image/solar-vs-glm-forensic-v1.png
+report/llm-dataset-guide-2025-10-16/.DS_Store
